--- a/css/_vti_cnf/default.css
+++ b/css/_vti_cnf/default.css
@@ -1,17 +1,12 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|13 Nov 2017 12:32:02 -0000
-vti_syncwith_localhost\\c\:\\users\\tayyab\\documents\\my webs\\myweb8/c\:/users/tayyab/documents/my webs/myweb8:TR|13 Nov 2017 12:32:02 -0000
 vti_author:SR|Tayyab-PC\\Tayyab
 vti_modifiedby:SR|Tayyab-PC\\Tayyab
-vti_nexttolasttimemodified:TR|13 Nov 2017 12:32:02 -0000
-vti_timecreated:TR|10 Dec 2017 09:20:08 -0000
-vti_extenderversion:SR|6.0.2.5516
-vti_syncwith_localhost\\c\:\\users\\tayyab\\documents\\my webs\\myweb7/c\:/users/tayyab/documents/my webs/myweb7:TR|13 Nov 2017 12:32:02 -0000
-vti_cacheddtm:TX|10 Dec 2017 09:20:08 -0000
-vti_filesize:IR|107978
+vti_timelastmodified:TR|27 Mar 2018 06:30:14 -0000
+vti_timecreated:TR|27 Mar 2018 06:30:14 -0000
+vti_cacheddtm:TX|27 Mar 2018 06:30:14 -0000
+vti_filesize:IR|139484
 vti_cachedlinkinfo:VX|Q|https://fonts.googleapis.com/css S|//static.sitemantic.com/webbuilder/images/bg/img-1.jpg S|//static.sitemantic.com/webbuilder/images/bg/img-2.jpg S|//static.sitemantic.com/webbuilder/images/bg/img-3.jpg S|//static.sitemantic.com/webbuilder/images/pattern/light/pattern-1.png S|//static.sitemantic.com/webbuilder/images/pattern/light/pattern-2.png S|ellipsis.xml S|ellipsis.xml
 vti_cachedsvcrellinks:VX|NQSS|https://fonts.googleapis.com/css NSUS|//static.sitemantic.com/webbuilder/images/bg/img-1.jpg NSUS|//static.sitemantic.com/webbuilder/images/bg/img-2.jpg NSUS|//static.sitemantic.com/webbuilder/images/bg/img-3.jpg NSUS|//static.sitemantic.com/webbuilder/images/pattern/light/pattern-1.png NSUS|//static.sitemantic.com/webbuilder/images/pattern/light/pattern-2.png NSUS|css/ellipsis.xml NSUS|css/ellipsis.xml
-vti_backlinkinfo:VX|contact-us.html index.htm Download\\ App.html
-vti_syncwith_localhost\\c\:\\website creartion/c\:/website creartion:TR|13 Nov 2017 12:32:02 -0000
-vti_syncwith_localhost\\c\:\\users\\tayyab\\desktop\\new folder/c\:/users/tayyab/desktop/new folder:TR|13 Nov 2017 12:32:02 -0000
-vti_syncwith_localhost\\c\:\\tech/c\:/tech:TR|13 Nov 2017 12:32:02 -0000
+vti_extenderversion:SR|5.0.2.2623
+vti_lineageid:SR|{23013AE2-2385-4DD4-95F9-98F1DA8FE18A}
+vti_backlinkinfo:VX|our-gallery.html contact-us.html index.htm about-us.html New\\ folder/index.htm New\\ folder/about-us.html New\\ folder/our-gallery.html New\\ folder/Download\\ App.html New\\ folder/contact-us.html toggle_navigation.htm
